# chat-llm

./: .gitignore  README.md  evaluate_by_ragas.py  note.md  pyproject.toml  requirements.txt
_scripts/: evaluate_chains_agent.py
backend/: chain.py  constants.py  dynamic_chain.py  evaluate.py  ingest.py  main.py  note.md  requirements.txt  utils.py  vector_store_manage.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ChatWindow.tsx  KnowledgeWindow.tsx
frontend/patches/: @langchain+core+0.1.63.patch
